connect IHM to server, firts tries

--- a/projects/IHM/app/homeMenu/homeMenu.html
+++ b/projects/IHM/app/homeMenu/homeMenu.html
@@ -1,8 +1,8 @@
 <div ng-controller="homeMenuCtrl">
 	<div style="display:none" ng-model="page"></div>
 	<div class="tab" expanded="false">
-		<button id="homeSave" class="tablinks" ng-click="save()">Sauver la configuration <br/> actuelle</button>
-		<button id="homeLoad" class="tablinks" ng-click="load()">Charger une configuration <br/>  </button>
+		<button disabled id="homeSave" class="tablinks" ng-click="save()">Sauver la configuration <br/> actuelle</button>
+		<button disabled id="homeLoad" class="tablinks" ng-click="load()">Charger une configuration <br/>  </button>
 		<button id="homeGen" class="tablinks" ng-click="generate()"> Generer l'emploi du temps </button>
 	</div>
 
