--- a/projects/resources/outServer/timetables/server/server_activities_days_horizontal.html
+++ b/projects/resources/outServer/timetables/server/server_activities_days_horizontal.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,20 +11,20 @@
   <body id="top">
     <table>
       <tr align="left" valign="top">
-        <th>Institution name:</th>
+        <th>Nom établissement:</th>
         <td>institution par defaut</td>
       </tr>
     </table>
     <table>
       <tr align="left" valign="top">
-        <th>Comments:</th>
+        <th>Commentaire:</th>
         <td>commentaires par defaut</td>
       </tr>
     </table>
     <table border="1">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="2">All Activities</th></tr>
+        <tr><td rowspan="2"></td><th colspan="2">Toutes les activités</th></tr>
         <tr>
           <!-- span -->
           <th class="xAxis">Lundi</th>
@@ -35,32 +35,32 @@
         <tr>
           <th class="yAxis">8h35 - 9h30</th>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
         <tr>
           <th class="yAxis">9h30 - 10h25</th>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">10h45 - 11h40</th>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
         </tr>
         <tr>
           <th class="yAxis">11h40 - 12h35</th>
           <td>---</td>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
         <tr>
           <th class="yAxis">13h45 - 14h40</th>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
         </tr>
         <tr>
           <th class="yAxis">14h40 - 15h35</th>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">15h35 - 16h30</th>
@@ -69,10 +69,10 @@
         </tr>
         <tr>
           <th class="yAxis">16h30 - 17h25</th>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
           <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
-      <tr class="foot"><td></td><td colspan="2">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+      <tr class="foot"><td></td><td colspan="2">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
   </body>
