--- a/projects/resources/outServer/timetables/server/server_activities_time_horizontal.html
+++ b/projects/resources/outServer/timetables/server/server_activities_time_horizontal.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -35,25 +35,25 @@
       </thead>
       <tbody>
         <tr>
-          <th class="yAxis">All Activities</th>
+          <th class="yAxis">Toutes les activités</th>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
-          <td>---</td>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
           <td>---</td>
           <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
           <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td>---</td>
           <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
           <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
-      <tr class="foot"><td></td><td colspan="16">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+      <tr class="foot"><td></td><td colspan="16">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
   </body>
