--- a/projects/resources/outServer/timetables/server/server_groups_time_horizontal.html
+++ b/projects/resources/outServer/timetables/server/server_groups_time_horizontal.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -37,24 +37,24 @@
         <tr>
           <th class="yAxis">6A</th>
           <td>---</td>
-          <td>Latin<br />Beatrice Beaugrand<br />C2<br /></td>
+          <td>Latin<br />Beatrice Beaugrand<br />C1<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
-          <td>---</td>
-          <td>---</td>
-          <td>Math<br />Arthur Auklo<br />C1<br /></td>
-          <td>Math<br />Arthur Auklo<br />C1<br /></td>
-          <td>Latin<br />Beatrice Beaugrand<br />C2<br /></td>
           <td>---</td>
           <td>Math<br />Arthur Auklo<br />C2<br /></td>
           <td>Math<br />Arthur Auklo<br />C2<br /></td>
+          <td>---</td>
+          <td>Latin<br />Beatrice Beaugrand<br />C1<br /></td>
+          <td>Math<br />Arthur Auklo<br />C2<br /></td>
+          <td>Math<br />Arthur Auklo<br />C1<br /></td>
+          <td>---</td>
           <td>Math<br />Arthur Auklo<br />C1<br /></td>
           <td>Latin<br />Beatrice Beaugrand<br />C2<br /></td>
         </tr>
         <tr>
-          <th class="yAxis">5e Automatic Group</th>
+          <th class="yAxis">5e Groupe automatique</th>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -73,7 +73,7 @@
           <td>---</td>
         </tr>
         <tr>
-          <th class="yAxis">4e Automatic Group</th>
+          <th class="yAxis">4e Groupe automatique</th>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -129,11 +129,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="16">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="16">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
   </body>
 </html>
