--- a/projects/resources/outServer/timetables/server/server_rooms_time_horizontal.html
+++ b/projects/resources/outServer/timetables/server/server_rooms_time_horizontal.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -37,18 +37,18 @@
         <tr>
           <th class="yAxis">C1</th>
           <td>---</td>
+          <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
+          <td>---</td>
+          <td>---</td>
+          <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
           <td>---</td>
           <td>6A<br />Arthur Auklo<br />Math<br /></td>
-          <td>6A<br />Arthur Auklo<br />Math<br /></td>
-          <td>---</td>
-          <td>---</td>
-          <td>---</td>
           <td>---</td>
           <td>6A<br />Arthur Auklo<br />Math<br /></td>
           <td>---</td>
@@ -56,23 +56,23 @@
         <tr>
           <th class="yAxis">C2</th>
           <td>---</td>
-          <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
-          <td>---</td>
-          <td>---</td>
-          <td>---</td>
-          <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
           <td>---</td>
           <td>6A<br />Arthur Auklo<br />Math<br /></td>
           <td>6A<br />Arthur Auklo<br />Math<br /></td>
+          <td>---</td>
+          <td>---</td>
+          <td>6A<br />Arthur Auklo<br />Math<br /></td>
+          <td>---</td>
+          <td>---</td>
           <td>---</td>
           <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
         </tr>
-      <tr class="foot"><td></td><td colspan="16">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+      <tr class="foot"><td></td><td colspan="16">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
   </body>
