--- a/projects/IHM/app/anchoredParts/body.html
+++ b/projects/IHM/app/anchoredParts/body.html
@@ -44,7 +44,30 @@
                 </md-tab>
             </md-tabs>
         </md-content>
-
+		
+		<div id="connect" class="loginForm">
+		
+			<div>
+				<label for="etablissement">Etablissement :</label>
+				<input id="etablissement" name="etablissement" type="text" ng-model="etablissement"/>
+			</div>
+		
+			<div>
+				<label for="mdp">Mot de passe :</label>
+				<input id="mdp" name="mdp" type="password" ng-model="mdp"/>
+			</div>
+			
+			<button ng-click="login()">Login</button>
+			
+		</div>
+		
+		<button id="disconnect" class="loginForm" style="display: none" ng-click="disconnect()">Déconnexion</button>
+		
+		<div id="overlayLoad">
+			<div id="selectorConfig">
+			</div>
+		</div>
+		
     </div>
 <!--
 Copyright 2016 Google Inc. All Rights Reserved.
