--- a/projects/resources/outServer/timetables/server/server_activities_time_vertical.html
+++ b/projects/resources/outServer/timetables/server/server_activities_time_vertical.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,7 +12,7 @@
     <table border="1">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td colspan="2"></td>          <th class="xAxis">All Activities</th></tr>
+        <tr><td colspan="2"></td>          <th class="xAxis">Toutes les activités</th></tr>
       </thead>
       <tbody>
         <tr>
@@ -23,7 +23,7 @@
         <tr>
           <!-- span -->
           <th class="yAxis">9h30 - 10h25</th>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
         </tr>
         <tr>
           <!-- span -->
@@ -53,37 +53,37 @@
         <tr>
           <!-- span -->
           <th class="yAxis">16h30 - 17h25</th>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
         <tr>
         <th rowspan="8">M<br />a<br />r<br />d<br />i<br /></th>
           <th class="yAxis">8h35 - 9h30</th>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">9h30 - 10h25</th>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
-        </tr>
-        <tr>
-          <!-- span -->
-          <th class="yAxis">10h45 - 11h40</th>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
-        </tr>
-        <tr>
-          <!-- span -->
-          <th class="yAxis">11h40 - 12h35</th>
           <td>---</td>
         </tr>
         <tr>
           <!-- span -->
-          <th class="yAxis">13h45 - 14h40</th>
+          <th class="yAxis">10h45 - 11h40</th>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+        </tr>
+        <tr>
+          <!-- span -->
+          <th class="yAxis">11h40 - 12h35</th>
           <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
         <tr>
           <!-- span -->
+          <th class="yAxis">13h45 - 14h40</th>
+          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+        </tr>
+        <tr>
+          <!-- span -->
           <th class="yAxis">14h40 - 15h35</th>
-          <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Math</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td>---</td>
         </tr>
         <tr>
           <!-- span -->
@@ -95,7 +95,7 @@
           <th class="yAxis">16h30 - 17h25</th>
           <td><table class="detailed"><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Latin</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
-      <tr class="foot"><td colspan="2"></td><td>Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+      <tr class="foot"><td colspan="2"></td><td>Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
   </body>
