--- a/projects/resources/outServer/timetables/server/server_activity_tags_time_vertical.html
+++ b/projects/resources/outServer/timetables/server/server_activity_tags_time_vertical.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -79,7 +79,7 @@
           <!-- span -->
           <th class="yAxis">16h30 - 17h25</th>
         </tr>
-        <tr class="foot"><td colspan="2"></td><td colspan="0">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td colspan="2"></td><td colspan="0">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
   </body>
