--- a/projects/resources/outServer/timetables/server/server_groups_days_vertical.html
+++ b/projects/resources/outServer/timetables/server/server_groups_days_vertical.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,50 +11,50 @@
   <body id="top">
     <table>
       <tr align="left" valign="top">
-        <th>Institution name:</th>
+        <th>Nom établissement:</th>
         <td>institution par defaut</td>
       </tr>
     </table>
     <table>
       <tr align="left" valign="top">
-        <th>Comments:</th>
+        <th>Commentaire:</th>
         <td>commentaires par defaut</td>
       </tr>
     </table>
-    <p><strong>Table of contents</strong></p>
+    <p><strong>Table des matières</strong></p>
     <ul>
       <li>
-        Year 6e
+        Année 6e
         <ul>
           <li>
-            Group <a href="#table_2">6A</a>
+            Groupe <a href="#table_2">6A</a>
           </li>
         </ul>
       </li>
       <li>
-        Year 5e
+        Année 5e
         <ul>
           <li>
-            Group <a href="#table_5">5e Automatic Group</a>
+            Groupe <a href="#table_5">5e Groupe automatique</a>
           </li>
         </ul>
       </li>
       <li>
-        Year 4e
+        Année 4e
         <ul>
           <li>
-            Group <a href="#table_8">4e Automatic Group</a>
+            Groupe <a href="#table_8">4e Groupe automatique</a>
           </li>
         </ul>
       </li>
       <li>
-        Year 3e
+        Année 3e
         <ul>
           <li>
-            Group <a href="#table_11">3A</a>
+            Groupe <a href="#table_11">3A</a>
           </li>
           <li>
-            Group <a href="#table_13">3B</a>
+            Groupe <a href="#table_13">3B</a>
           </li>
         </ul>
       </li>
@@ -80,35 +80,35 @@
         <tr>
           <th class="yAxis">Lundi</th>
           <td>---</td>
-          <td>Latin<br />Beatrice Beaugrand<br />C2<br /></td>
+          <td>Latin<br />Beatrice Beaugrand<br />C1<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
-          <td>---</td>
+          <td>Math<br />Arthur Auklo<br />C2<br /></td>
         </tr>
         <tr>
           <th class="yAxis">Mardi</th>
-          <td>Math<br />Arthur Auklo<br />C1<br /></td>
-          <td>Math<br />Arthur Auklo<br />C1<br /></td>
-          <td>Latin<br />Beatrice Beaugrand<br />C2<br /></td>
+          <td>Math<br />Arthur Auklo<br />C2<br /></td>
           <td>---</td>
+          <td>Latin<br />Beatrice Beaugrand<br />C1<br /></td>
           <td>Math<br />Arthur Auklo<br />C2<br /></td>
-          <td>Math<br />Arthur Auklo<br />C2<br /></td>
+          <td>Math<br />Arthur Auklo<br />C1<br /></td>
+          <td>---</td>
           <td>Math<br />Arthur Auklo<br />C1<br /></td>
           <td>Latin<br />Beatrice Beaugrand<br />C2<br /></td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_5" border="1" class="even_table">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="8">5e Automatic Group</th></tr>
+        <tr><td rowspan="2"></td><th colspan="8">5e Groupe automatique</th></tr>
         <tr>
           <!-- span -->
           <th class="xAxis">8h35 - 9h30</th>
@@ -144,16 +144,16 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_8" border="1" class="odd_table">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="8">4e Automatic Group</th></tr>
+        <tr><td rowspan="2"></td><th colspan="8">4e Groupe automatique</th></tr>
         <tr>
           <!-- span -->
           <th class="xAxis">8h35 - 9h30</th>
@@ -189,11 +189,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_11" border="1" class="even_table">
       <caption>institution par defaut</caption>
@@ -234,11 +234,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_13" border="1" class="odd_table">
       <caption>institution par defaut</caption>
@@ -279,11 +279,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
   </body>
 </html>
