--- a/projects/resources/outServer/timetables/server/server_groups_time_vertical.html
+++ b/projects/resources/outServer/timetables/server/server_groups_time_vertical.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,7 +12,7 @@
     <table id="table" border="1">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td colspan="2"></td>          <th class="xAxis">6A</th>          <th class="xAxis">5e Automatic Group</th>          <th class="xAxis">4e Automatic Group</th>          <th class="xAxis">3A</th>          <th class="xAxis">3B</th></tr>
+        <tr><td colspan="2"></td>          <th class="xAxis">6A</th>          <th class="xAxis">5e Groupe automatique</th>          <th class="xAxis">4e Groupe automatique</th>          <th class="xAxis">3A</th>          <th class="xAxis">3B</th></tr>
       </thead>
       <tbody>
         <tr>
@@ -27,7 +27,7 @@
         <tr>
           <!-- span -->
           <th class="yAxis">9h30 - 10h25</th>
-          <td>Latin<br />Beatrice Beaugrand<br />C2<br /></td>
+          <td>Latin<br />Beatrice Beaugrand<br />C1<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -81,7 +81,7 @@
         <tr>
           <!-- span -->
           <th class="yAxis">16h30 - 17h25</th>
-          <td>---</td>
+          <td>Math<br />Arthur Auklo<br />C2<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -90,7 +90,7 @@
         <tr>
         <th rowspan="8">M<br />a<br />r<br />d<br />i<br /></th>
           <th class="yAxis">8h35 - 9h30</th>
-          <td>Math<br />Arthur Auklo<br />C1<br /></td>
+          <td>Math<br />Arthur Auklo<br />C2<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -99,7 +99,7 @@
         <tr>
           <!-- span -->
           <th class="yAxis">9h30 - 10h25</th>
-          <td>Math<br />Arthur Auklo<br />C1<br /></td>
+          <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -108,7 +108,7 @@
         <tr>
           <!-- span -->
           <th class="yAxis">10h45 - 11h40</th>
-          <td>Latin<br />Beatrice Beaugrand<br />C2<br /></td>
+          <td>Latin<br />Beatrice Beaugrand<br />C1<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -117,7 +117,7 @@
         <tr>
           <!-- span -->
           <th class="yAxis">11h40 - 12h35</th>
-          <td>---</td>
+          <td>Math<br />Arthur Auklo<br />C2<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -126,7 +126,7 @@
         <tr>
           <!-- span -->
           <th class="yAxis">13h45 - 14h40</th>
-          <td>Math<br />Arthur Auklo<br />C2<br /></td>
+          <td>Math<br />Arthur Auklo<br />C1<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -135,7 +135,7 @@
         <tr>
           <!-- span -->
           <th class="yAxis">14h40 - 15h35</th>
-          <td>Math<br />Arthur Auklo<br />C2<br /></td>
+          <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -159,11 +159,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td colspan="2"></td><td colspan="5">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td colspan="2"></td><td colspan="5">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
   </body>
 </html>
