--- a/projects/resources/outServer/timetables/server/server_index.html
+++ b/projects/resources/outServer/timetables/server/server_index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,95 +11,95 @@
   <body id="top">
     <table>
       <tr align="left" valign="top">
-        <th>Institution name:</th>
+        <th>Nom établissement:</th>
         <td>institution par defaut</td>
       </tr>
     </table>
     <table>
       <tr align="left" valign="top">
-        <th>Comments:</th>
+        <th>Commentaire:</th>
         <td>commentaires par defaut</td>
       </tr>
     </table>
     <p>
-      <a href="server_soft_conflicts.txt">View the soft conflicts list.</a><br />
-      View statistics:       <a href="server_students_statistics.html">students</a>, <a href="server_teachers_statistics.html">teachers</a>.<br />
-      View XML: <a href="server_subgroups.xml">subgroups</a>, <a href="server_teachers.xml">teachers</a>, <a href="server_activities.xml">activities</a>.
+      <a href="server_soft_conflicts.txt">Voir la liste des conflits légers.</a><br />
+      Voir statistiques :       <a href="server_students_statistics.html">apprenants</a>, <a href="server_teachers_statistics.html">enseignants</a>.<br />
+      Voir XML : <a href="server_subgroups.xml">sous-groupes</a>, <a href="server_teachers.xml">enseignants</a>, <a href="server_activities.xml">activités</a>.
     </p>
 
     <table border="1">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="4">Timetables</th></tr>
+        <tr><td rowspan="2"></td><th colspan="4">Plannings</th></tr>
         <tr>
           <!-- span -->
-          <th>Days Horizontal</th><th>Days Vertical</th><th>Time Horizontal</th><th>Time Vertical</th>        </tr>
+          <th>Jours Horizontaux</th><th>Jours Verticaux</th><th>Temps Horizontal</th><th>Temps Vertical</th>        </tr>
       </thead>
       <tbody>
         <tr>
-          <th>Subgroups</th>
-          <td><a href="server_subgroups_days_horizontal.html">view</a></td>
-          <td><a href="server_subgroups_days_vertical.html">view</a></td>
-          <td><a href="server_subgroups_time_horizontal.html">view</a></td>
-          <td><a href="server_subgroups_time_vertical.html">view</a></td>
+          <th>Sous-groupes</th>
+          <td><a href="server_subgroups_days_horizontal.html">vue</a></td>
+          <td><a href="server_subgroups_days_vertical.html">vue</a></td>
+          <td><a href="server_subgroups_time_horizontal.html">vue</a></td>
+          <td><a href="server_subgroups_time_vertical.html">vue</a></td>
         </tr>
         <tr>
-          <th>Groups</th>
-          <td><a href="server_groups_days_horizontal.html">view</a></td>
-          <td><a href="server_groups_days_vertical.html">view</a></td>
-          <td><a href="server_groups_time_horizontal.html">view</a></td>
-          <td><a href="server_groups_time_vertical.html">view</a></td>
+          <th>Groupes</th>
+          <td><a href="server_groups_days_horizontal.html">vue</a></td>
+          <td><a href="server_groups_days_vertical.html">vue</a></td>
+          <td><a href="server_groups_time_horizontal.html">vue</a></td>
+          <td><a href="server_groups_time_vertical.html">vue</a></td>
         </tr>
         <tr>
-          <th>Years</th>
-          <td><a href="server_years_days_horizontal.html">view</a></td>
-          <td><a href="server_years_days_vertical.html">view</a></td>
-          <td><a href="server_years_time_horizontal.html">view</a></td>
-          <td><a href="server_years_time_vertical.html">view</a></td>
+          <th>Années</th>
+          <td><a href="server_years_days_horizontal.html">vue</a></td>
+          <td><a href="server_years_days_vertical.html">vue</a></td>
+          <td><a href="server_years_time_horizontal.html">vue</a></td>
+          <td><a href="server_years_time_vertical.html">vue</a></td>
         </tr>
         <tr>
-          <th>Teachers</th>
-          <td><a href="server_teachers_days_horizontal.html">view</a></td>
-          <td><a href="server_teachers_days_vertical.html">view</a></td>
-          <td><a href="server_teachers_time_horizontal.html">view</a></td>
-          <td><a href="server_teachers_time_vertical.html">view</a></td>
+          <th>Enseignants</th>
+          <td><a href="server_teachers_days_horizontal.html">vue</a></td>
+          <td><a href="server_teachers_days_vertical.html">vue</a></td>
+          <td><a href="server_teachers_time_horizontal.html">vue</a></td>
+          <td><a href="server_teachers_time_vertical.html">vue</a></td>
         </tr>
         <tr>
-          <th>Teachers' Free Periods</th>
-          <td><a href="server_teachers_free_periods_days_horizontal.html">view</a></td>
-          <td><a href="server_teachers_free_periods_days_vertical.html">view</a></td>
+          <th>Périodes Libres des Enseignants</th>
+          <td><a href="server_teachers_free_periods_days_horizontal.html">vue</a></td>
+          <td><a href="server_teachers_free_periods_days_vertical.html">vue</a></td>
           <td>---</td>
           <td>---</td>
         </tr>
         <tr>
-          <th>Rooms</th>
-          <td><a href="server_rooms_days_horizontal.html">view</a></td>
-          <td><a href="server_rooms_days_vertical.html">view</a></td>
-          <td><a href="server_rooms_time_horizontal.html">view</a></td>
-          <td><a href="server_rooms_time_vertical.html">view</a></td>
+          <th>Salles</th>
+          <td><a href="server_rooms_days_horizontal.html">vue</a></td>
+          <td><a href="server_rooms_days_vertical.html">vue</a></td>
+          <td><a href="server_rooms_time_horizontal.html">vue</a></td>
+          <td><a href="server_rooms_time_vertical.html">vue</a></td>
         </tr>
         <tr>
-          <th>Subjects</th>
-          <td><a href="server_subjects_days_horizontal.html">view</a></td>
-          <td><a href="server_subjects_days_vertical.html">view</a></td>
-          <td><a href="server_subjects_time_horizontal.html">view</a></td>
-          <td><a href="server_subjects_time_vertical.html">view</a></td>
+          <th>Matières</th>
+          <td><a href="server_subjects_days_horizontal.html">vue</a></td>
+          <td><a href="server_subjects_days_vertical.html">vue</a></td>
+          <td><a href="server_subjects_time_horizontal.html">vue</a></td>
+          <td><a href="server_subjects_time_vertical.html">vue</a></td>
         </tr>
         <tr>
-          <th>Activity Tags</th>
-          <td><a href="server_activity_tags_days_horizontal.html">view</a></td>
-          <td><a href="server_activity_tags_days_vertical.html">view</a></td>
-          <td><a href="server_activity_tags_time_horizontal.html">view</a></td>
-          <td><a href="server_activity_tags_time_vertical.html">view</a></td>
+          <th>Codes Activité</th>
+          <td><a href="server_activity_tags_days_horizontal.html">vue</a></td>
+          <td><a href="server_activity_tags_days_vertical.html">vue</a></td>
+          <td><a href="server_activity_tags_time_horizontal.html">vue</a></td>
+          <td><a href="server_activity_tags_time_vertical.html">vue</a></td>
         </tr>
         <tr>
-          <th>Activities</th>
-          <td><a href="server_activities_days_horizontal.html">view</a></td>
-          <td><a href="server_activities_days_vertical.html">view</a></td>
-          <td><a href="server_activities_time_horizontal.html">view</a></td>
-          <td><a href="server_activities_time_vertical.html">view</a></td>
+          <th>Activités</th>
+          <td><a href="server_activities_days_horizontal.html">vue</a></td>
+          <td><a href="server_activities_days_vertical.html">vue</a></td>
+          <td><a href="server_activities_time_horizontal.html">vue</a></td>
+          <td><a href="server_activities_time_vertical.html">vue</a></td>
         </tr>
-      <tr class="foot"><td></td><td colspan="4">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+      <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
   </body>
