--- a/projects/resources/outServer/timetables/server/server_rooms_days_vertical.html
+++ b/projects/resources/outServer/timetables/server/server_rooms_days_vertical.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,17 +11,17 @@
   <body id="top">
     <table>
       <tr align="left" valign="top">
-        <th>Institution name:</th>
+        <th>Nom établissement:</th>
         <td>institution par defaut</td>
       </tr>
     </table>
     <table>
       <tr align="left" valign="top">
-        <th>Comments:</th>
+        <th>Commentaire:</th>
         <td>commentaires par defaut</td>
       </tr>
     </table>
-    <p><strong>Table of contents</strong></p>
+    <p><strong>Table des matières</strong></p>
     <ul>
       <li><a href="#table_1">C1</a></li>
       <li><a href="#table_2">C2</a></li>
@@ -48,7 +48,7 @@
         <tr>
           <th class="yAxis">Lundi</th>
           <td>---</td>
-          <td>---</td>
+          <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -58,20 +58,20 @@
         </tr>
         <tr>
           <th class="yAxis">Mardi</th>
+          <td>---</td>
+          <td>---</td>
+          <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
+          <td>---</td>
           <td>6A<br />Arthur Auklo<br />Math<br /></td>
-          <td>6A<br />Arthur Auklo<br />Math<br /></td>
-          <td>---</td>
-          <td>---</td>
-          <td>---</td>
           <td>---</td>
           <td>6A<br />Arthur Auklo<br />Math<br /></td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_2" border="1" class="even_table">
       <caption>institution par defaut</caption>
@@ -93,30 +93,30 @@
         <tr>
           <th class="yAxis">Lundi</th>
           <td>---</td>
-          <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
+          <td>6A<br />Arthur Auklo<br />Math<br /></td>
         </tr>
         <tr>
           <th class="yAxis">Mardi</th>
+          <td>6A<br />Arthur Auklo<br />Math<br /></td>
           <td>---</td>
-          <td>---</td>
-          <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
           <td>---</td>
           <td>6A<br />Arthur Auklo<br />Math<br /></td>
-          <td>6A<br />Arthur Auklo<br />Math<br /></td>
+          <td>---</td>
+          <td>---</td>
           <td>---</td>
           <td>6A<br />Beatrice Beaugrand<br />Latin<br /></td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
   </body>
 </html>
