--- a/projects/resources/outServer/timetables/server/server_students_statistics.html
+++ b/projects/resources/outServer/timetables/server/server_students_statistics.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,56 +11,56 @@
   <body id="top">
     <table>
       <tr align="left" valign="top">
-        <th>Institution name:</th>
+        <th>Nom établissement:</th>
         <td>institution par defaut</td>
       </tr>
     </table>
     <table>
       <tr align="left" valign="top">
-        <th>Comments:</th>
+        <th>Commentaire:</th>
         <td>commentaires par defaut</td>
       </tr>
     </table>
     <p>
-      This file doesn't list limits that are set by constraints. It contains statistics about the min and max values of the currently calculated solution.
+      Ce fichier ne liste pas les limites qui sont fixées par les contraintes. Il contient des statistiques à propos des valeurs minimales et maximales de la solution calculée actuellement.
     </p>
     <table border="1">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><th>All students</th><th>Free days</th><th>Gaps</th><th>Gaps per day</th><th>Hours per day</th></tr>
+        <tr><th>Tous les apprenants</th><th>Jours libres</th><th>Vides</th><th>Vides par jour</th><th>Heures par jour</th></tr>
       </thead>
-      <tr><th>Sum</th><td>8</td><td>1</td><td>---</td><td>---</td></tr>
-      <tr><th>Average</th><td>1.60</td><td>0.20</td><td>---</td><td>---</td></tr>
-      <tr><th>Min</th><td>0</td><td>0</td><td>0</td><td>1</td></tr>
-      <tr><th>Max</th><td>2</td><td>1</td><td>1</td><td>7</td></tr>
-        <tr class="foot"><td></td><td colspan="4">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+      <tr><th>Somme</th><td>8</td><td>7</td><td>---</td><td>---</td></tr>
+      <tr><th>Moyenne</th><td>1.60</td><td>1.40</td><td>---</td><td>---</td></tr>
+      <tr><th>Min</th><td>0</td><td>0</td><td>0</td><td>2</td></tr>
+      <tr><th>Max</th><td>2</td><td>7</td><td>5</td><td>6</td></tr>
+        <tr class="foot"><td></td><td colspan="4">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
     </table>
     <p class="back0"><br /></p>
 
     <table border="1">
       <caption>institution par defaut</caption>
       <thead>
-      <tr><th>Year</th><th>Min free days</th><th>Max free days</th><th>Min hours per day</th><th>Max hours per day</th><th>Min gaps per week</th><th>Max gaps per week</th><th>Min gaps per day</th><th>Max gaps per day</th></tr>
+      <tr><th>Année</th><th>Jours libres min</th><th>Limite jours libres</th><th>Heures min quotidiennes</th><th>Limite heures quotidiennes</th><th>Vides min par semaine</th><th>Limite vides par semaine</th><th>Vides min quotidiens</th><th>Limite vides quotidiens</th></tr>
       </thead>
-      <tr><th>6e</th><td>0</td><td>0</td><td>1</td><td>7</td><td>1</td><td>1</td><td>0</td><td>1</td></tr>
+      <tr><th>6e</th><td>0</td><td>0</td><td>2</td><td>6</td><td>7</td><td>7</td><td>2</td><td>5</td></tr>
       <tr><th>5e</th><td>2</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
       <tr><th>4e</th><td>2</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
       <tr><th>3e</th><td>2</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
     </table>
     <p class="back0"><br /></p>
 
     <table border="1">
       <caption>institution par defaut</caption>
       <thead>
-      <tr><th>Group</th><th>Min free days</th><th>Max free days</th><th>Min hours per day</th><th>Max hours per day</th><th>Min gaps per week</th><th>Max gaps per week</th><th>Min gaps per day</th><th>Max gaps per day</th></tr>
+      <tr><th>Groupe</th><th>Jours libres min</th><th>Limite jours libres</th><th>Heures min quotidiennes</th><th>Limite heures quotidiennes</th><th>Vides min par semaine</th><th>Limite vides par semaine</th><th>Vides min quotidiens</th><th>Limite vides quotidiens</th></tr>
       </thead>
-      <tr><th>6A</th><td>0</td><td>0</td><td>1</td><td>7</td><td>1</td><td>1</td><td>0</td><td>1</td></tr>
-      <tr><th>5e Automatic Group</th><td>2</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-      <tr><th>4e Automatic Group</th><td>2</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+      <tr><th>6A</th><td>0</td><td>0</td><td>2</td><td>6</td><td>7</td><td>7</td><td>2</td><td>5</td></tr>
+      <tr><th>5e Groupe automatique</th><td>2</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+      <tr><th>4e Groupe automatique</th><td>2</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
       <tr><th>3A</th><td>2</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
       <tr><th>3B</th><td>2</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
     </table>
     <p class="back0"><br /></p>
 
@@ -68,14 +68,14 @@
     <table border="1">
       <caption>institution par defaut</caption>
       <thead>
-      <tr><th>Subgroup</th><th>Free days</th><th>Total gaps</th><th>Min gaps per day</th><th>Max gaps per day</th><th>Min hours per day</th><th>Max hours per day</th></tr>
+      <tr><th>Sous-groupe</th><th>Jours libres</th><th>Vides totaux</th><th>Vides min quotidiens</th><th>Limite vides quotidiens</th><th>Heures min quotidiennes</th><th>Limite heures quotidiennes</th></tr>
       </thead>
-      <tr><th>6A Automatic Subgroup</th><td>0</td><td>1</td><td>0</td><td>1</td><td>1</td><td>7</td></tr>
-      <tr><th>5e Automatic Group Automatic Subgroup</th><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-      <tr><th>4e Automatic Group Automatic Subgroup</th><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-      <tr><th>3A Automatic Subgroup</th><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-      <tr><th>3B Automatic Subgroup</th><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-        <tr class="foot"><td></td><td colspan="6">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+      <tr><th>6A Sous-groupe automatique</th><td>0</td><td>7</td><td>2</td><td>5</td><td>2</td><td>6</td></tr>
+      <tr><th>5e Groupe automatique Sous-groupe automatique</th><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+      <tr><th>4e Groupe automatique Sous-groupe automatique</th><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+      <tr><th>3A Sous-groupe automatique</th><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+      <tr><th>3B Sous-groupe automatique</th><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+        <tr class="foot"><td></td><td colspan="6">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
     </table>
   </body>
 </html>
