--- a/projects/resources/outServer/timetables/server/server_subgroups_days_vertical.html
+++ b/projects/resources/outServer/timetables/server/server_subgroups_days_vertical.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,55 +11,55 @@
   <body id="top">
     <table>
       <tr align="left" valign="top">
-        <th>Institution name:</th>
+        <th>Nom établissement:</th>
         <td>institution par defaut</td>
       </tr>
     </table>
     <table>
       <tr align="left" valign="top">
-        <th>Comments:</th>
+        <th>Commentaire:</th>
         <td>commentaires par defaut</td>
       </tr>
     </table>
-    <p><strong>Table of contents</strong></p>
+    <p><strong>Table des matières</strong></p>
     <ul>
       <li>
-        Year 6e
+        Année 6e
         <ul>
           <li>
-            Group 6A: 
-              <a href="#table_3">6A Automatic Subgroup</a>
+            Groupe 6A: 
+              <a href="#table_3">6A Sous-groupe automatique</a>
           </li>
         </ul>
       </li>
       <li>
-        Year 5e
+        Année 5e
         <ul>
           <li>
-            Group 5e Automatic Group: 
-              <a href="#table_6">5e Automatic Group Automatic Subgroup</a>
+            Groupe 5e Groupe automatique: 
+              <a href="#table_6">5e Groupe automatique Sous-groupe automatique</a>
           </li>
         </ul>
       </li>
       <li>
-        Year 4e
+        Année 4e
         <ul>
           <li>
-            Group 4e Automatic Group: 
-              <a href="#table_9">4e Automatic Group Automatic Subgroup</a>
+            Groupe 4e Groupe automatique: 
+              <a href="#table_9">4e Groupe automatique Sous-groupe automatique</a>
           </li>
         </ul>
       </li>
       <li>
-        Year 3e
+        Année 3e
         <ul>
           <li>
-            Group 3A: 
-              <a href="#table_12">3A Automatic Subgroup</a>
+            Groupe 3A: 
+              <a href="#table_12">3A Sous-groupe automatique</a>
           </li>
           <li>
-            Group 3B: 
-              <a href="#table_14">3B Automatic Subgroup</a>
+            Groupe 3B: 
+              <a href="#table_14">3B Sous-groupe automatique</a>
           </li>
         </ul>
       </li>
@@ -68,7 +68,7 @@
     <table id="table_3" border="1" class="odd_table">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="8">6A Automatic Subgroup</th></tr>
+        <tr><td rowspan="2"></td><th colspan="8">6A Sous-groupe automatique</th></tr>
         <tr>
           <!-- span -->
           <th class="xAxis">8h35 - 9h30</th>
@@ -85,35 +85,35 @@
         <tr>
           <th class="yAxis">Lundi</th>
           <td>---</td>
-          <td>6A<br />Latin<br />Beatrice Beaugrand<br />C2<br /></td>
+          <td>6A<br />Latin<br />Beatrice Beaugrand<br />C1<br /></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
-          <td>---</td>
+          <td>6A<br />Math<br />Arthur Auklo<br />C2<br /></td>
         </tr>
         <tr>
           <th class="yAxis">Mardi</th>
-          <td>6A<br />Math<br />Arthur Auklo<br />C1<br /></td>
-          <td>6A<br />Math<br />Arthur Auklo<br />C1<br /></td>
-          <td>6A<br />Latin<br />Beatrice Beaugrand<br />C2<br /></td>
+          <td>6A<br />Math<br />Arthur Auklo<br />C2<br /></td>
           <td>---</td>
+          <td>6A<br />Latin<br />Beatrice Beaugrand<br />C1<br /></td>
           <td>6A<br />Math<br />Arthur Auklo<br />C2<br /></td>
-          <td>6A<br />Math<br />Arthur Auklo<br />C2<br /></td>
+          <td>6A<br />Math<br />Arthur Auklo<br />C1<br /></td>
+          <td>---</td>
           <td>6A<br />Math<br />Arthur Auklo<br />C1<br /></td>
           <td>6A<br />Latin<br />Beatrice Beaugrand<br />C2<br /></td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_6" border="1" class="even_table">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="8">5e Automatic Group Automatic Subgroup</th></tr>
+        <tr><td rowspan="2"></td><th colspan="8">5e Groupe automatique Sous-groupe automatique</th></tr>
         <tr>
           <!-- span -->
           <th class="xAxis">8h35 - 9h30</th>
@@ -149,16 +149,16 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_9" border="1" class="odd_table">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="8">4e Automatic Group Automatic Subgroup</th></tr>
+        <tr><td rowspan="2"></td><th colspan="8">4e Groupe automatique Sous-groupe automatique</th></tr>
         <tr>
           <!-- span -->
           <th class="xAxis">8h35 - 9h30</th>
@@ -194,16 +194,16 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_12" border="1" class="even_table">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="8">3A Automatic Subgroup</th></tr>
+        <tr><td rowspan="2"></td><th colspan="8">3A Sous-groupe automatique</th></tr>
         <tr>
           <!-- span -->
           <th class="xAxis">8h35 - 9h30</th>
@@ -239,16 +239,16 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_14" border="1" class="odd_table">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="8">3B Automatic Subgroup</th></tr>
+        <tr><td rowspan="2"></td><th colspan="8">3B Sous-groupe automatique</th></tr>
         <tr>
           <!-- span -->
           <th class="xAxis">8h35 - 9h30</th>
@@ -284,11 +284,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
   </body>
 </html>
