--- a/projects/resources/outServer/timetables/server/server_subjects_days_vertical.html
+++ b/projects/resources/outServer/timetables/server/server_subjects_days_vertical.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,29 +11,29 @@
   <body id="top">
     <table>
       <tr align="left" valign="top">
-        <th>Institution name:</th>
+        <th>Nom établissement:</th>
         <td>institution par defaut</td>
       </tr>
     </table>
     <table>
       <tr align="left" valign="top">
-        <th>Comments:</th>
+        <th>Commentaire:</th>
         <td>commentaires par defaut</td>
       </tr>
     </table>
-    <p><strong>Table of contents</strong></p>
+    <p><strong>Table des matières</strong></p>
     <ul>
       <li>
-        Subject <a href="#table_1">Physique</a>
+        Matière <a href="#table_1">Physique</a>
       </li>
       <li>
-        Subject <a href="#table_2">Musique</a>
+        Matière <a href="#table_2">Musique</a>
       </li>
       <li>
-        Subject <a href="#table_3">Math</a>
+        Matière <a href="#table_3">Math</a>
       </li>
       <li>
-        Subject <a href="#table_4">Latin</a>
+        Matière <a href="#table_4">Latin</a>
       </li>
     </ul>
     <p>&nbsp;</p>
@@ -77,11 +77,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_2" border="1" class="even_table">
       <caption>institution par defaut</caption>
@@ -122,11 +122,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_3" border="1" class="odd_table">
       <caption>institution par defaut</caption>
@@ -154,24 +154,24 @@
           <td>---</td>
           <td>---</td>
           <td>---</td>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
         <tr>
           <th class="yAxis">Mardi</th>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
           <td>---</td>
           <td>---</td>
           <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td>---</td>
           <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_4" border="1" class="even_table">
       <caption>institution par defaut</caption>
@@ -193,7 +193,7 @@
         <tr>
           <th class="yAxis">Lundi</th>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
@@ -205,18 +205,18 @@
           <th class="yAxis">Mardi</th>
           <td>---</td>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td>---</td>
           <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
-        <tr class="foot"><td></td><td colspan="8">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="8">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
   </body>
 </html>
