--- a/projects/resources/outServer/timetables/server/server_subjects_time_vertical.html
+++ b/projects/resources/outServer/timetables/server/server_subjects_time_vertical.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -29,7 +29,7 @@
           <td>---</td>
           <td>---</td>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
         </tr>
         <tr>
           <!-- span -->
@@ -76,7 +76,7 @@
           <th class="yAxis">16h30 - 17h25</th>
           <td>---</td>
           <td>---</td>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
           <td>---</td>
         </tr>
         <tr>
@@ -84,7 +84,7 @@
           <th class="yAxis">8h35 - 9h30</th>
           <td>---</td>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
           <td>---</td>
         </tr>
         <tr>
@@ -92,7 +92,7 @@
           <th class="yAxis">9h30 - 10h25</th>
           <td>---</td>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
+          <td>---</td>
           <td>---</td>
         </tr>
         <tr>
@@ -101,14 +101,14 @@
           <td>---</td>
           <td>---</td>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C1</td></tr></table></td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">11h40 - 12h35</th>
           <td>---</td>
           <td>---</td>
-          <td>---</td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
           <td>---</td>
         </tr>
         <tr>
@@ -116,7 +116,7 @@
           <th class="yAxis">13h45 - 14h40</th>
           <td>---</td>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C1</td></tr></table></td>
           <td>---</td>
         </tr>
         <tr>
@@ -124,7 +124,7 @@
           <th class="yAxis">14h40 - 15h35</th>
           <td>---</td>
           <td>---</td>
-          <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Arthur Auklo</td></tr><tr><td class="detailed">C2</td></tr></table></td>
+          <td>---</td>
           <td>---</td>
         </tr>
         <tr>
@@ -143,7 +143,7 @@
           <td>---</td>
           <td><table class="detailed"><tr><td class="detailed"></td></tr><tr><td class="detailed">6A</td></tr><tr><td class="detailed">Beatrice Beaugrand</td></tr><tr><td class="detailed">C2</td></tr></table></td>
         </tr>
-        <tr class="foot"><td colspan="2"></td><td colspan="4">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td colspan="2"></td><td colspan="4">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
   </body>
