--- a/projects/resources/outServer/timetables/server/server_teachers_free_periods_days_horizontal.html
+++ b/projects/resources/outServer/timetables/server/server_teachers_free_periods_days_horizontal.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,31 +11,31 @@
   <body id="top">
     <table>
       <tr align="left" valign="top">
-        <th>Institution name:</th>
+        <th>Nom établissement:</th>
         <td>institution par defaut</td>
       </tr>
     </table>
     <table>
       <tr align="left" valign="top">
-        <th>Comments:</th>
+        <th>Commentaire:</th>
         <td>commentaires par defaut</td>
       </tr>
     </table>
-    <div class="TEACHER_HAS_SINGLE_GAP">Teacher has a single gap</div>
-    <div class="TEACHER_HAS_BORDER_GAP">Teacher has a border gap</div>
-    <div class="TEACHER_HAS_BIG_GAP">Teacher has a big gap</div>
-    <div class="TEACHER_MUST_COME_EARLIER">Teacher must come earlier</div>
-    <div class="TEACHER_MUST_COME_MUCH_EARLIER">Teacher must come much earlier</div>
-    <div class="TEACHER_MUST_STAY_LONGER">Teacher must stay longer</div>
-    <div class="TEACHER_MUST_STAY_MUCH_LONGER">Teacher must stay much longer</div>
-    <div class="TEACHER_HAS_A_FREE_DAY">Teacher has a free day</div>
-    <div class="TEACHER_IS_NOT_AVAILABLE">Teacher is not available</div>
+    <div class="TEACHER_HAS_SINGLE_GAP">Un enseignant a un seul vide</div>
+    <div class="TEACHER_HAS_BORDER_GAP">Un enseignant a un vide en bordure</div>
+    <div class="TEACHER_HAS_BIG_GAP">Un enseignant a un grand vide</div>
+    <div class="TEACHER_MUST_COME_EARLIER">Un enseignant doit venir plus tôt</div>
+    <div class="TEACHER_MUST_COME_MUCH_EARLIER">Un enseignant doit venir beaucoup plus tôt</div>
+    <div class="TEACHER_MUST_STAY_LONGER">Un enseignant doit rester plus longtemps</div>
+    <div class="TEACHER_MUST_STAY_MUCH_LONGER">Un enseignant doit rester beaucoup plus longtemps</div>
+    <div class="TEACHER_HAS_A_FREE_DAY">Un enseignant a un jour libre</div>
+    <div class="TEACHER_IS_NOT_AVAILABLE">Un enseignant n'est pas disponible</div>
     <p>&nbsp;</p>
 
     <table id="table" border="1">
       <caption>institution par defaut</caption>
       <thead>
-        <tr><td rowspan="2"></td><th colspan="2">Teachers' Free Periods</th></tr>
+        <tr><td rowspan="2"></td><th colspan="2">Périodes Libres des Enseignants</th></tr>
         <tr>
           <!-- span -->
           <th class="xAxis">Lundi</th>
@@ -45,45 +45,45 @@
       <tbody>
         <tr>
           <th class="yAxis">8h35 - 9h30</th>
-          <td><div class="DESCRIPTION">Must come earlier:</div>Beatrice Beaugrand<br /><div class="DESCRIPTION">Free day:</div>Arthur Auklo<br /></td>
-          <td><div class="DESCRIPTION">Must come much earlier:</div>Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Doit venir plus tôt:</div>Beatrice Beaugrand<br /><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Arthur Auklo<br /></td>
+          <td><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Beatrice Beaugrand<br /></td>
         </tr>
         <tr>
           <th class="yAxis">9h30 - 10h25</th>
-          <td><div class="DESCRIPTION">Free day:</div>Arthur Auklo<br /></td>
-          <td><div class="DESCRIPTION">Must come earlier:</div>Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Arthur Auklo<br /></td>
+          <td><div class="DESCRIPTION">Vide en bordure:</div>Arthur Auklo<br /><div class="DESCRIPTION">Doit venir plus tôt:</div>Beatrice Beaugrand<br /></td>
         </tr>
         <tr>
           <th class="yAxis">10h45 - 11h40</th>
-          <td><div class="DESCRIPTION">Must stay longer:</div>Beatrice Beaugrand<br /><div class="DESCRIPTION">Free day:</div>Arthur Auklo<br /></td>
-          <td><div class="DESCRIPTION">Border gap:</div>Arthur Auklo<br /></td>
+          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>Beatrice Beaugrand<br /><div class="DESCRIPTION">Doit venir beaucoup plus tôt:</div>Arthur Auklo<br /></td>
+          <td><div class="DESCRIPTION">Vide en bordure:</div>Arthur Auklo<br /></td>
         </tr>
         <tr>
           <th class="yAxis">11h40 - 12h35</th>
-          <td><div class="DESCRIPTION">Not available:</div>Arthur Auklo<br />Beatrice Beaugrand<br /></td>
-          <td><div class="DESCRIPTION">Border gap:</div>Arthur Auklo<br /><div class="DESCRIPTION">Not available:</div>Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Pas disponible:</div>Arthur Auklo<br />Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Pas disponible:</div>Beatrice Beaugrand<br /></td>
         </tr>
         <tr>
           <th class="yAxis">13h45 - 14h40</th>
-          <td><div class="DESCRIPTION">Not available:</div>Arthur Auklo<br />Beatrice Beaugrand<br /></td>
-          <td><div class="DESCRIPTION">Not available:</div>Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Pas disponible:</div>Arthur Auklo<br />Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Pas disponible:</div>Beatrice Beaugrand<br /></td>
         </tr>
         <tr>
           <th class="yAxis">14h40 - 15h35</th>
-          <td><div class="DESCRIPTION">Not available:</div>Arthur Auklo<br />Beatrice Beaugrand<br /></td>
-          <td><div class="DESCRIPTION">Big gap:</div>Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Pas disponible:</div>Arthur Auklo<br />Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Vide simple:</div>Arthur Auklo<br /><div class="DESCRIPTION">Grand vide:</div>Beatrice Beaugrand<br /></td>
         </tr>
         <tr>
           <th class="yAxis">15h35 - 16h30</th>
-          <td><div class="DESCRIPTION">Not available:</div>Arthur Auklo<br />Beatrice Beaugrand<br /></td>
-          <td><div class="DESCRIPTION">Not available:</div>Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Pas disponible:</div>Arthur Auklo<br />Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Pas disponible:</div>Beatrice Beaugrand<br /></td>
         </tr>
         <tr>
           <th class="yAxis">16h30 - 17h25</th>
-          <td><div class="DESCRIPTION">Must stay much longer:</div>Beatrice Beaugrand<br /><div class="DESCRIPTION">Free day:</div>Arthur Auklo<br /></td>
-          <td><div class="DESCRIPTION">Must stay longer:</div>Arthur Auklo<br /></td>
+          <td><div class="DESCRIPTION">Doit rester beaucoup plus longtemps:</div>Beatrice Beaugrand<br /></td>
+          <td><div class="DESCRIPTION">Doit rester plus longtemps:</div>Arthur Auklo<br /></td>
         </tr>
-        <tr class="foot"><td></td><td colspan="2">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="2">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
