--- a/projects/resources/outServer/timetables/server/server_teachers_time_vertical.html
+++ b/projects/resources/outServer/timetables/server/server_teachers_time_vertical.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -25,7 +25,7 @@
           <!-- span -->
           <th class="yAxis">9h30 - 10h25</th>
           <td>---</td>
-          <td>6A<br />Latin<br />C2<br /></td>
+          <td>6A<br />Latin<br />C1<br /></td>
         </tr>
         <tr>
           <!-- span -->
@@ -60,43 +60,43 @@
         <tr>
           <!-- span -->
           <th class="yAxis">16h30 - 17h25</th>
-          <td>---</td>
+          <td>6A<br />Math<br />C2<br /></td>
           <td>---</td>
         </tr>
         <tr>
         <th rowspan="8">M<br />a<br />r<br />d<br />i<br /></th>
           <th class="yAxis">8h35 - 9h30</th>
-          <td>6A<br />Math<br />C1<br /></td>
+          <td>6A<br />Math<br />C2<br /></td>
           <td>---</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">9h30 - 10h25</th>
-          <td>6A<br />Math<br />C1<br /></td>
+          <td>---</td>
           <td>---</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">10h45 - 11h40</th>
           <td>---</td>
-          <td>6A<br />Latin<br />C2<br /></td>
+          <td>6A<br />Latin<br />C1<br /></td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">11h40 - 12h35</th>
-          <td>---</td>
+          <td>6A<br />Math<br />C2<br /></td>
           <td>-x-</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">13h45 - 14h40</th>
-          <td>6A<br />Math<br />C2<br /></td>
+          <td>6A<br />Math<br />C1<br /></td>
           <td>-x-</td>
         </tr>
         <tr>
           <!-- span -->
           <th class="yAxis">14h40 - 15h35</th>
-          <td>6A<br />Math<br />C2<br /></td>
+          <td>---</td>
           <td>---</td>
         </tr>
         <tr>
@@ -111,7 +111,7 @@
           <td>---</td>
           <td>6A<br />Latin<br />C2<br /></td>
         </tr>
-      <tr class="foot"><td colspan="2"></td><td colspan="2">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+      <tr class="foot"><td colspan="2"></td><td colspan="2">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
   </body>
