--- a/projects/resources/outServer/timetables/server/server_years_days_horizontal.html
+++ b/projects/resources/outServer/timetables/server/server_years_days_horizontal.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
   <head>
     <title>institution par defaut</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,29 +11,29 @@
   <body id="top">
     <table>
       <tr align="left" valign="top">
-        <th>Institution name:</th>
+        <th>Nom établissement:</th>
         <td>institution par defaut</td>
       </tr>
     </table>
     <table>
       <tr align="left" valign="top">
-        <th>Comments:</th>
+        <th>Commentaire:</th>
         <td>commentaires par defaut</td>
       </tr>
     </table>
-    <p><strong>Table of contents</strong></p>
+    <p><strong>Table des matières</strong></p>
     <ul>
       <li>
-        Year <a href="#table_1">6e</a>
+        Année <a href="#table_1">6e</a>
       </li>
       <li>
-        Year <a href="#table_4">5e</a>
+        Année <a href="#table_4">5e</a>
       </li>
       <li>
-        Year <a href="#table_7">4e</a>
+        Année <a href="#table_7">4e</a>
       </li>
       <li>
-        Year <a href="#table_10">3e</a>
+        Année <a href="#table_10">3e</a>
       </li>
     </ul>
     <p>&nbsp;</p>
@@ -52,32 +52,32 @@
         <tr>
           <th class="yAxis">8h35 - 9h30</th>
           <td>---</td>
-          <td>6A<br />Math<br />Arthur Auklo<br />C1<br /></td>
+          <td>6A<br />Math<br />Arthur Auklo<br />C2<br /></td>
         </tr>
         <tr>
           <th class="yAxis">9h30 - 10h25</th>
-          <td>6A<br />Latin<br />Beatrice Beaugrand<br />C2<br /></td>
-          <td>6A<br />Math<br />Arthur Auklo<br />C1<br /></td>
+          <td>6A<br />Latin<br />Beatrice Beaugrand<br />C1<br /></td>
+          <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">10h45 - 11h40</th>
           <td>---</td>
-          <td>6A<br />Latin<br />Beatrice Beaugrand<br />C2<br /></td>
+          <td>6A<br />Latin<br />Beatrice Beaugrand<br />C1<br /></td>
         </tr>
         <tr>
           <th class="yAxis">11h40 - 12h35</th>
           <td>---</td>
-          <td>---</td>
+          <td>6A<br />Math<br />Arthur Auklo<br />C2<br /></td>
         </tr>
         <tr>
           <th class="yAxis">13h45 - 14h40</th>
           <td>---</td>
-          <td>6A<br />Math<br />Arthur Auklo<br />C2<br /></td>
+          <td>6A<br />Math<br />Arthur Auklo<br />C1<br /></td>
         </tr>
         <tr>
           <th class="yAxis">14h40 - 15h35</th>
           <td>---</td>
-          <td>6A<br />Math<br />Arthur Auklo<br />C2<br /></td>
+          <td>---</td>
         </tr>
         <tr>
           <th class="yAxis">15h35 - 16h30</th>
@@ -86,14 +86,14 @@
         </tr>
         <tr>
           <th class="yAxis">16h30 - 17h25</th>
-          <td>---</td>
+          <td>6A<br />Math<br />Arthur Auklo<br />C2<br /></td>
           <td>6A<br />Latin<br />Beatrice Beaugrand<br />C2<br /></td>
         </tr>
-        <tr class="foot"><td></td><td colspan="2">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="2">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_4" border="1" class="even_table">
       <caption>institution par defaut</caption>
@@ -146,11 +146,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="2">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="2">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_7" border="1" class="odd_table">
       <caption>institution par defaut</caption>
@@ -203,11 +203,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="2">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="2">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
     <table id="table_10" border="1" class="even_table">
       <caption>institution par defaut</caption>
@@ -260,11 +260,11 @@
           <td>---</td>
           <td>---</td>
         </tr>
-        <tr class="foot"><td></td><td colspan="2">Timetable generated with FET 5.31.4 on 5/1/17 11:18 AM</td></tr>
+        <tr class="foot"><td></td><td colspan="2">Planning généré avec FET 5.31.4 le 01/05/2017 19:47</td></tr>
       </tbody>
     </table>
 
-    <p class="back"><a href="#top">back to the top</a></p>
+    <p class="back"><a href="#top">retour en haut</a></p>
 
   </body>
 </html>
