Disable unsable menu on left bar

--- a/projects/IHM/app/programmeMenu/programmeMenu.html
+++ b/projects/IHM/app/programmeMenu/programmeMenu.html
@@ -5,10 +5,10 @@
             ng-click="openTab('programmeMenu/gradeClassesTab/gradeClassesTab.html', 'programmeGradeClasses')">
       Niveaux - Classes
     </button>
-    <button id="programmeSubjects" class="tablinks" ng-click="openTab('programmeMenu/subjectsTab/subjectsTab.html', 'programmeSubjects')">
+    <button ng-disabled="roomType.length == 0" id="programmeSubjects" class="tablinks" ng-click="openTab('programmeMenu/subjectsTab/subjectsTab.html', 'programmeSubjects')">
       Matières
     </button>
-    <button id="programmeProgramme" class="tablinks"
+    <button ng-disabled="years.length == 0 || subject.length == 0" id="programmeProgramme" class="tablinks"
             ng-click="openTab('programmeMenu/programmeTab/programmeTab.html', 'programmeProgramme')">Répartition horaire
       par niveau
     </button>
