--- a/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
+++ b/projects/IHM/app/schoolInformationMenu/schoolInformationMenu.html
@@ -6,7 +6,7 @@
 
   <button id="schHoraires" class="tablinks" ng-click="openTab('schoolInformationMenu/scheduleTab/scheduleTab.html', 'schHoraires')">Jours et horaires</button>
   <button id="schTypeSalles" class="tablinks" ng-click="openTab('schoolInformationMenu/roomTypeTab/roomTypeTab.html', 'schTypeSalles')">Type de salles</button>
-  <button id="schSalles" class="tablinks" ng-click="openTab('schoolInformationMenu/roomTab/roomTab.html', 'schSalles')">Salles</button>
+  <button ng-disabled="roomType.length == 0" id="schSalles" class="tablinks" ng-click="openTab('schoolInformationMenu/roomTab/roomTab.html', 'schSalles')">Salles</button>
 
 </div>
 
