change text align on login informations

--- a/projects/IHM/app/anchoredParts/body.html
+++ b/projects/IHM/app/anchoredParts/body.html
@@ -48,12 +48,12 @@
 		<div id="connect" class="loginForm">
 		
 			<div>
-				<label for="etablissement">Etablissement :</label>
+				<label for="etablissement" style="text-align: right">Etablissement :</label>
 				<input id="etablissement" name="etablissement" type="text" ng-model="etablissement"/>
 			</div>
 		
 			<div>
-				<label for="mdp">Mot de passe :</label>
+				<label for="mdp" style="text-align: right">Mot de passe :</label>
 				<input id="mdp" name="mdp" type="password" ng-model="mdp"/>
 			</div>
 			
