Interface de selection de configuration

--- a/projects/IHM/app/anchoredParts/body.html
+++ b/projects/IHM/app/anchoredParts/body.html
@@ -63,9 +63,15 @@
 		
 		<button id="disconnect" class="loginForm" style="display: none" ng-click="disconnect()">Déconnexion</button>
 		
+		
 		<div id="overlayLoad">
-			<div id="selectorConfig">
-			</div>
+			<fieldset>
+			
+				<legend>Choisissez une configuration existante</legend>
+				<div id="selectorConfig">
+				</div>
+			
+			</fieldset>
 		</div>
 		
     </div>
